--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ groq = "^0.5.0"
 slowapi = "^0.1.9"
 redis = "^5.0.4"
 llama-index-llms-ollama = "^0.1.3"
+llama-index-readers-web = "^0.1.17"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.7.1"
